Start stop video

--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <script src="snap.js">
-    </script>
+<h1>All good</h1>
+<video id="player" width="640" height="480" controls autoplay></video>
 
-    <h1>All Good</h1>
-    <div>
-        Let's check your ingredients
-    </div>
+<script src="snap.js">
 
-    <div>
-        <video id="video" width="640" height="480" autoplay></video>
-        <button id="snap">Snap Photo</button>
-        <canvas id="canvas" width="640" height="480"></canvas>
-    </div>
+</script>
 
+<button onClick="toggleCamera()">Start/Stop</button>
 </body>
 
 </html>
