feature: add snapshot capability

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
 </script>
 
 <button onClick="toggleCamera()">Start/Stop</button>
+<button onClick="snapPhoto()">Snap Photo</button>
+<canvas id="canvas" width="640" height="480"></canvas>
 </body>
 
 </html>
