feature: validate output with input list

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>All good</h1>
+<h1>Ingredients checker</h1>
 <video id="player" width="640" height="480" controls autoplay></video>
 
 <script src="snap.js"></script>
@@ -12,6 +12,13 @@
 <button onClick="snapPhoto()">Snap Photo</button>
 <canvas id="canvas" width="640" height="480"></canvas>
 <div id="results"></div>
+<h2>Allergens</h2>
+<div>
+    <ul id="list">
+
+    </ul>
+</div>
+
 </body>
 
 </html>
